@@ -19,16 +19,16 @@
 ## -*- texinfo -*-
 ## @deftypefn {Function File} {} wblcdf (@var{x}, @var{scale}, @var{shape})
 ## Compute the cumulative distribution function (CDF) at @var{x} of the
-## Weibull distribution with shape parameter @var{scale} and scale
+## Weibull distribution with scale parameter @var{scale} and shape
 ## parameter @var{shape}, which is
 ## @tex
-## $$ 1 - \exp(-(x/shape)^{scale}) $$
-## for $x\geq 0$.
+## $$ 1 - e^{-({x \over scale})^{shape}} $$
+## for $x \geq 0$.
 ## @end tex
 ## @ifnottex
 ##
 ## @example
-## 1 - exp(-(x/shape)^scale)
+## 1 - exp(-(x/scale)^shape)
 ## @end example
 ##
 ## @noindent
